[package]
name = "work_calc"
version = "0.1.0"
authors = ["Julian Schmidhuber <schmidhuberj2@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = {version = "0.6.0", features = ["im"]}
im = {version = "*", features = ["serde"]}
chrono = {version = "0.4", features = ["serde"]}
serde = {version = "*", features = ["rc"]}
ron = "*"
printpdf = "0.3.2"
